refactored analyzer logic. Added codefix

--- a/Anx.Analyzers.InheritanceProtection/Anx.Analyzers.InheritanceProtection/Anx.Analyzers.InheritanceProtection.csproj
+++ b/Anx.Analyzers.InheritanceProtection/Anx.Analyzers.InheritanceProtection/Anx.Analyzers.InheritanceProtection.csproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netstandard1.3</TargetFramework>
+    <TargetFramework>netstandard2.0</TargetFramework>
     <IncludeBuildOutput>false</IncludeBuildOutput>
     <GeneratePackageOnBuild>True</GeneratePackageOnBuild>
   </PropertyGroup>
@@ -9,17 +9,18 @@
   <PropertyGroup>
     <PackageId>Anx.Analyzers.InheritanceProtection</PackageId>
     <PackageVersion>1.0.0.0</PackageVersion>
-    <Authors>torst</Authors>
-    <PackageLicenseUrl>http://LICENSE_URL_HERE_OR_DELETE_THIS_LINE</PackageLicenseUrl>
-    <PackageProjectUrl>http://PROJECT_URL_HERE_OR_DELETE_THIS_LINE</PackageProjectUrl>
-    <PackageIconUrl>http://ICON_URL_HERE_OR_DELETE_THIS_LINE</PackageIconUrl>
-    <RepositoryUrl>http://REPOSITORY_URL_HERE_OR_DELETE_THIS_LINE</RepositoryUrl>
+    <Authors>anx</Authors>
+    <PackageLicenseUrl></PackageLicenseUrl>
+    <PackageProjectUrl></PackageProjectUrl>
+    <PackageIconUrl></PackageIconUrl>
+    <RepositoryUrl></RepositoryUrl>
     <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
-    <Description>Anx.Analyzers.InheritanceProtection</Description>
-    <PackageReleaseNotes>Summary of changes made in this release of the package.</PackageReleaseNotes>
+    <Description></Description>
+    <PackageReleaseNotes></PackageReleaseNotes>
     <Copyright>Copyright</Copyright>
-    <PackageTags>Anx.Analyzers.InheritanceProtection, analyzers</PackageTags>
+    <PackageTags>analyzers</PackageTags>
     <NoPackageAnalysis>true</NoPackageAnalysis>
+    <Company>anx</Company>
   </PropertyGroup>
 
   <ItemGroup>
